--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,15 @@
-body{
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
     margin-top: 50px;
+    font-size: 1rem;
 }
 
 .permissoes {
     flex: 1;
+}
+
+.sombra{
+    box-shadow: 3px 5px 10px 1px rgba(181,181,181,1);
 }
