--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,42 @@ body {
 .permissoes {
     flex: 1;
 }
-
+/* efeito de sombra */
 .sombra{
     box-shadow: 3px 5px 10px 1px rgba(181,181,181,1);
 }
+/* cor do botao */
+.btn-pink {
+    color: #fff;
+    background-color: #F25270;
+    border-color: #F25270;
+  }
+  
+  .btn-pink:hover {
+    color: #fff;
+    background-color: #ee244a;
+    border-color: #ee244a;
+  }
+  242 82 112
+  238 36 74
+  .btn-pink:focus, .btn-pink.focus {
+    box-shadow: 0 0 0 0.2rem rgba(238, 36, 74, 0.5);
+  }
+  
+  .btn-pink.disabled, .btn-pink:disabled {
+    color: #fff;
+    background-color: #F25270;
+    border-color: #F25270;
+  }
+  
+  .btn-pink:not(:disabled):not(.disabled):active, .btn-pink:not(:disabled):not(.disabled).active,
+  .show > .btn-pink.dropdown-toggle {
+    color: #fff;
+    background-color: #ee244a;
+    border-color: #ee244a;
+  }
+  
+  .btn-pink:not(:disabled):not(.disabled):active:focus, .btn-pink:not(:disabled):not(.disabled).active:focus,
+  .show > .btn-pink.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+  }
